--- a/BagOfFunnies/app/src/main/res/layout/activity_riddle_page.xml
+++ b/BagOfFunnies/app/src/main/res/layout/activity_riddle_page.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
         android:layout_marginTop="36dp"
+        android:layout_centerHorizontal="true"
         android:text="An old lady forgets her drivers licence at home. She travels down a one way street the wrong way. She does not stop at stop signs, or stop for people crossing the road. A cop is watching her do this and he does not give her a ticket. Why didn't he give her a ticket?"
         android:textAlignment="center"
         android:textSize="15dp" />
