--- a/BagOfFunnies/app/src/main/res/layout/activity_dad_joke_page.xml
+++ b/BagOfFunnies/app/src/main/res/layout/activity_dad_joke_page.xml
@@ -25,51 +25,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
-        android:layout_marginTop="100dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="140dp"
         android:text=""
         android:textAlignment="center"
         android:textSize="15dp" />
 
-    <TextView
-        android:id="@+id/dadJokeAnswerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/showDadJokeButton"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="100dp"
-        android:text=""
-        android:textAlignment="center"
-        android:textSize="15dp" />
-
-    <Button
-        android:id="@+id/showDadJokeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/newDadJokeButton"
-        android:layout_alignBottom="@+id/newDadJokeButton"
-        android:layout_centerHorizontal="true"
-        android:text="Show Answer" />
 
     <Button
         android:id="@+id/dadJokeMainMenuButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="71dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_toLeftOf="@+id/showDadJokeButton"
-        android:layout_toStartOf="@+id/showDadJokeButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="142dp"
+        android:layout_marginLeft="38dp"
+        android:layout_marginStart="38dp"
         android:text="Main Menu" />
 
     <Button
         android:id="@+id/newDadJokeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/dadJokeMainMenuButton"
+        android:layout_alignBottom="@+id/dadJokeMainMenuButton"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/dadJokeMainMenuButton"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:text="New Dad Joke" />
 </RelativeLayout>
